# frontier

./: .gitignore  .lvimrc  README.md  frontier.cabal
doc/: example_screenshot_1.txt
src/: Main.hs
src/Frontier/: Actions.hs  Controller.hs  Data.hs  Extra.hs  Feature.hs  Features.hs  Generic.hs  IO.hs  Input.hs  MainLoop.hs  Model.hs  Monad.hs  Prelude.hs  Tag.hs  View.hs  World.hs
src/Frontier/Engine/: Action.hs  Monad.hs  Pipe.hs  State.hs  World.hs
src/Frontier/Feature/: Action.hs  Base.hs  Compose.hs  Entity.hs  GenericMethods.hs  Qualifier.hs
src/Frontier/Features/: Building.hs  Farming.hs  Moving.hs
src/Frontier/Model/: Core.hs  Dynamic.hs  Feature.hs  Interaction.hs  Static.hs
src/Frontier/Model/Core/: Dynamic.hs  Feature.hs  Static.hs
src/Frontier/Model/Core/Feature/: Prelude.hs
src/Frontier/Model/Core/Features/: Base.hs  Building.hs
src/Frontier/Model/Dynamic/: Actions.hs  Interface.hs
src/Frontier/Model/Features/: Base.hs  Building.hs
src/data/: level.fro
src/main/: Main.hs
src/main/Frontier/: Controller.hs  Core.hs  Engine.hs  Feature.hs  IO.hs  Interaction.hs  Prelude.hs  View.hs
src/main/Frontier/Core/: Feature.hs
src/main/Frontier/Core/Feature/: Prelude.hs
src/main/Frontier/Core/Features/: Base.hs  Building.hs
src/main/Frontier/Feature/: Base.hs  Building.hs  Fishing.hs
src/main/Frontier/Model/: Core.hs  Interaction.hs
src/main/Frontier/Model/Core/: Dynamic.hs  Feature.hs  Static.hs
src/main/Frontier/Model/Core/Feature/: Prelude.hs
src/main/Frontier/Model/Core/Features/: Base.hs  Building.hs
src/test/: Tests.hs
src/test/Frontier/Model/: InteractionTest.hs
src/test/Frontier/Model/Core/: DynamicTest.hs
src/test/Frontier/Model/Core/Features/: BaseTest.hs  BuildingTest.hs
src/test/Frontier/Model/Core/Testing/: Dynamic.hs  Instances.hs  Static.hs
test-src/: FrontierTests.hs
test-src/Frontier/Engine/: ActionTest.hs
test-src/Frontier/Feature/: ComposeTest.hs
test-src/Frontier/Features/: BuildingTest.hs  FarmingTest.hs  MovingTest.hs
