name:           frontier
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ilmoeuro

executable frontier
  hs-source-dirs:  src/main
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >= 0.5 && < 0.6,
                   text >= 1.2 && < 1.3,
                   bytestring >= 0.10 && < 0.11,
                   utf8-string >= 0.3 && < 0.4,
                   free >= 4.9 && < 5.0,
                   lens >= 4.7 && < 4.8,
                   transformers >= 0.3.0.0 && < 0.4,
                   random >= 1.1 && < 1.2,
                   split >= 0.2.2 && < 0.3,
                   mtl >= 2.1 && < 2.2,
                   pipes >= 4.1 && < 4.2,
                   mvc == 1.0.3,
                   managed >= 1.0.0 && < 1.1,
                   multiset >= 0.2 && < 0.3,
                   extra >= 1.0 && < 1.1,
                   safe >= 0.3 && < 0.4,
                   cond >= 0.4 && < 0.5,
                   data-default >= 0.5.3 && < 0.6,
                   ansi-terminal >= 0.6 && < 0.7,
                   vty >= 5.2.6 && < 5.3
  ghc-options:     -Wall -threaded -O3
  other-modules:   
                   Frontier.Prelude,
                   Frontier.Engine,
                   Frontier.Feature,
                   Frontier.Feature.Base,
                   Frontier.Feature.Building,
                   Frontier.Interaction,
                   Frontier.IO

test-suite Tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  
                   src/main,
                   src/test
  main-is:         Tests.hs
  ghc-options:     -Wall -rtsopts
  cpp-options:     -DTEST
  build-depends:   base >= 4,
                   tasty > 0.10,
                   tasty-hunit,
                   HUnit,
                   tasty-quickcheck,
                   QuickCheck,
                   lens >= 4.7 && < 4.8
--  other-modules:   

